Actions
Bug #13107
closedpageout should use hrtime instead of lbolt
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The paging routines in uts/common/os/vm_pageout.c
presently make use of a mixture of ddi_get_lbolt(9F)
and gethrtime(9F)
for time keeping. A lot of this code has existed for a long time, but the algorithm is relatively simple and there doesn't appear to be a reason not to just deal in nanosecond intervals throughout the entire mechanism.
Related issues
Updated by Joshua M. Clulow over 1 year ago
- Related to Bug #13097: improve VM tunables for modern systems added
Updated by Electric Monk over 1 year ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 2d9166aee5315081107056f3d663e4adee4c1c2a
commit 2d9166aee5315081107056f3d663e4adee4c1c2a Author: Joshua M. Clulow <josh@sysmgr.org> Date: 2021-02-03T00:41:05.000Z 13097 improve VM tunables for modern systems 13107 pageout should use hrtime instead of lbolt Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions